# src/routes/userRoutes.ts
@@ -4,6 +4,7 @@ import UserController from "../controllers/userController";
 const router = Router();
 
 router.post("/register", UserController.registerUser);
+router.post("/login", UserController.loginUser);
 router.get("/find/:email", UserController.getUser);
 router.get("/", UserController.getAllUsers);
 
